--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,3 +1,7 @@
+@import "loader.scss";
+
+/****Basic styles for small screens (mobile first)****/
+
 $font-stack: Roboto, sans-serif;
 $font-logo: Shrikhand, serif;
 $primary-color: #9356dc;
@@ -11,18 +15,8 @@ $clr-txt-ftr: #ffffff;
 $clr-bg-adress: #eaeaea;
 $clr-bg-new: #99e2d0;
 $clr-txt-new: #008766;
+$color-grey: grey;
 
-@import "loader.scss";
-
-h1,
-h2,
-h3 {
-  margin: 0;
-  padding: 0;
-}
-h1 {
-  font-weight: 500;
-}
 @mixin shadow {
   box-shadow: 0px 10px 6px -6px rgba(0, 0, 0, 0.15);
   position: relative;
@@ -40,26 +34,52 @@ h1 {
   align-items: center;
 }
 
+
+@mixin footer-media-queries {
+  footer {
+    display: flex;
+    flex-direction: row-reverse;
+    height: 114px;
+    h3 {
+      padding-top: 50px;
+      padding-right: 50px;
+    }
+  }
+}
+
 * {
   font-family: $font-stack;
+}
+
+body {
+  display: flex;
+  justify-content: center;
+  margin: 0;
+}
+
+h1,
+h2,
+h3 {
+  margin: 0;
+  padding: 0;
+}
+h1 {
+  font-weight: 500;
 }
 a {
   color: inherit;
   text-decoration: none;
 }
+
 .main-container {
   width: 100%;
 }
+
 .container {
   width: 100%;
   margin: auto;
   padding: 0 20px;
   box-sizing: border-box;
-}
-body {
-  display: flex;
-  justify-content: center;
-  margin: 0;
 }
 .header {
   display: flex;
@@ -75,6 +95,7 @@ body {
   padding-bottom: 18px;
   padding-top: 16px;
 }
+
 .adress__section {
   background-color: $clr-bg-adress;
   width: 100%;
@@ -86,7 +107,7 @@ body {
     &.search {
       font-size: 16px;
       font-weight: 500;
-      background-color: #eaeaea;
+      background-color: $clr-bg-adress;
       border: none;
       text-align: center;
       padding-left: 10px;
@@ -107,7 +128,7 @@ body {
 .btn {
   border-radius: 25px;
   border: none;
-  color: #ffffff;
+  color: $clr-txt-ftr;
   margin-top: 10px;
   padding: 15px 30px;
   background: linear-gradient(to bottom, $secondary-color, $primary-color);
@@ -117,50 +138,52 @@ body {
     opacity: 0.7;
     box-shadow: 0px 12px 6px -6px rgba(0, 0, 0, 0.15);
   }
-
   @include shadow;
 }
 
 .section-title {
   @include padding-margin-title;
 }
+
 .steps__functionning {
   display: flex;
   flex-direction: column;
   padding-left: 10px;
-}
-.article__functionning {
-  height: 72px;
-  background-color: #f6f6f6;
-  font-weight: bold;
-  display: flex;
-  align-items: center;
-  width: 100%;
+  padding-bottom: 35px;
 
   &--content {
     display: flex;
     align-items: center;
     padding-left: 40px;
   }
-  &.card {
+  &--article {
+    height: 72px;
     background-color: $main-bg-color;
-  }
-  span {
-    width: 24px;
-    height: 24px;
-    border-radius: 50%;
-    @include flex-center;
-    border: $primary-color solid 1px;
-    background-color: $primary-color;
-    color: white;
-    position: absolute;
-    margin-left: -11px;
-    text-align: center;
-    line-height: 24px;
+    font-weight: bold;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    &.card {
+      background-color: $main-bg-color;
+    }
+    span {
+      width: 24px;
+      height: 24px;
+      border-radius: 50%;
+      @include flex-center;
+      border: $primary-color solid 1px;
+      background-color: $primary-color;
+      color: $clr-txt-ftr;
+      position: absolute;
+      margin-left: -11px;
+      text-align: center;
+      line-height: 24px;
+    }
   }
 }
+
 .article__i {
-  color: grey;
+  color: $color-grey;
   padding-right: 20px;
 
   &--store {
@@ -176,38 +199,33 @@ body {
   border-radius: 20px;
   margin-bottom: 20px;
   @include shadow;
-  background-color: #ffffff;
-  .card-content {
+  background-color: $clr-txt-ftr;
+  &__content {
     padding-left: 15px;
     display: flex;
     justify-content: space-between;
     align-items: center;
-    .txt-card {
-      .card-title {
-        margin-bottom: 5px;
-        margin-top: 10px;
-        font-size: 18px;
-        font-weight: bold;
-        display: block;
-      }
-      .card-subtitle {
-        margin-top: 0;
-        margin-bottom: 1em;
-        display: block;
-      }
+    &--title {
+      margin-bottom: 5px;
+      margin-top: 10px;
+      font-size: 18px;
+      font-weight: bold;
+      display: block;
+    }
+    &--subtitle {
+      margin-top: 0;
+      margin-bottom: 1em;
+      display: block;
     }
   }
-}
-.restaurants-cards {
-  padding-bottom: 50px;
-  img {
-    height: 231px;
-    width: 100%;
-    border-top-left-radius: 20px;
-    border-top-right-radius: 20px;
-    object-fit: cover;
+  &__shadow {
+    box-shadow: 0px 4px 4px -7px rgba(0, 0, 0, 0.1);
   }
-  .new {
+}
+
+.restaurants__cards {
+  padding-bottom: 50px;
+  &--new {
     @include flex-center;
     @include shadow;
     width: 80px;
@@ -217,27 +235,34 @@ body {
     position: absolute;
     right: 15px;
     top: 20px;
-    span {
-      color: $clr-txt-new;
-    }
+    color: $clr-txt-new;
+  }
+  img {
+    height: 231px;
+    width: 100%;
+    border-top-left-radius: 20px;
+    border-top-right-radius: 20px;
+    object-fit: cover;
   }
 }
+
 .heart-container {
   width: 25px;
   height: 25px;
   margin-right: 30px;
-}
-i.heart {
-  padding-right: 25px;
-  font-size: 25px;
-  position: absolute;
-  &.fa-solid {
-    opacity: 0;
-    transition: all 0.3s ease-in-out;
-    &:hover,
-    &:focus,
-    &:visited {
-      opacity: 1;
+  /****heart's animation****/
+  &__heart {
+    padding-right: 25px;
+    font-size: 25px;
+    position: absolute;
+    &.fa-solid {
+      opacity: 0;
+      transition: all 0.3s ease-in-out;
+      &:hover,
+      &:focus,
+      &:visited {
+        opacity: 1;
+      }
     }
   }
 }
@@ -253,6 +278,7 @@ i.heart {
   -webkit-background-clip: text;
   -webkit-text-fill-color: transparent;
 }
+/****footer bloc*****/
 
 footer {
   background-color: $footer-bg-color;
@@ -261,7 +287,7 @@ footer {
   width: 100%;
 
   h3 {
-    color: white;
+    color: $clr-txt-ftr;
     font-family: $font-logo;
     font-weight: 300;
     margin-top: 0;
@@ -273,44 +299,44 @@ footer {
   i {
     width: 15px;
   }
+  ul {
+    list-style: none;
+    margin: 0;
+    padding-inline-start: 20px;
+
+    li {
+      padding-top: 5px;
+    }
+
+    i {
+      padding-right: 15px;
+    }
+  }
 }
 
-ul {
-  list-style: none;
-  margin: 0;
-  padding-inline-start: 20px;
-
-  li {
-    padding-top: 5px;
-  }
-
-  i {
-    padding-right: 15px;
-  }
-}
 /*****media queries Desktop version****/
 @media (min-width: 1024px) {
+  .header {
+    box-shadow: 0px 5px 6px -6px rgba(0, 0, 0, 0.1);
+  }
   .container {
     max-width: 1055px;
   }
-  .restaurants-cards {
+  .adress__section {
+    box-shadow: none;
+  }
+
+  .restaurants__cards {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
     justify-content: center;
     .card {
-      min-width: 30rem;
+      width: 30rem;
+      max-width: 48%;
     }
   }
-  footer {
-    display: flex;
-    flex-direction: row-reverse;
-    height: 114px;
-    h3 {
-      padding-top: 50px;
-      padding-right: 50px;
-    }
-  }
+  @include footer-media-queries;
   .nav-bar {
     display: flex;
     padding-right: 60px;
@@ -329,24 +355,16 @@ ul {
   }
 }
 /*****media queries tablet version*****/
-/****j'ai répété le code du desktop***/
 @media (min-width: 768px) and (max-width: 1023px) {
-  footer {
-    display: flex;
-    flex-direction: row-reverse;
-    height: 114px;
-    h3 {
-      padding-top: 50px;
-      padding-right: 50px;
-    }
-  }
+  @include footer-media-queries;
   .nav-bar {
     display: flex;
-    padding-right: 60px;
   }
+
   ul {
     display: flex;
     padding-top: 50px;
+    gap: 10px;
     li {
       padding-right: 6px;
       font-size: 14px;
@@ -356,7 +374,7 @@ ul {
     flex-direction: row;
     gap: 20px;
     padding-bottom: 30px;
-    .article__functionning--content {
+    &--content {
       padding-left: 24px;
       font-size: 14px;
     }
@@ -364,7 +382,7 @@ ul {
       padding-right: 9px;
     }
   }
-  .restaurants-cards {
+  .restaurants__cards {
     display: flex;
     flex-wrap: wrap;
     gap: 2rem;
